force-app/main/default/objects/Contact/fields/Disqualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Notes__c</fullName>
    <description>Additional context or details about why the lead was disqualified.</description>
    <inlineHelpText>Provide any relevant notes or details supporting the disqualification reason.</inlineHelpText>
    <label>Disqualification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>