force-app/main/default/objects/Contact/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Primary reason the lead was disqualified.</description>
    <inlineHelpText>Select the main reason this lead was marked as disqualified.</inlineHelpText>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAD_TIMING</fullName>
                <label>Bad Timing</label>
            </value>
            <value>
                <fullName>BUDGET_CONSTRAINTS</fullName>
                <label>Budget Constraints</label>
            </value>
            <value>
                <fullName>NO_DECISION_MAKING_POWER</fullName>
                <label>No Decision-Making Authority</label>
            </value>
            <value>
                <fullName>COMPETITOR_PREFERENCE</fullName>
                <label>Competitor Chosen</label>
            </value>
            <value>
                <fullName>NOT_A_GOOD_FIT</fullName>
                <label>Not a Good Fit</label>
            </value>
            <value>
                <fullName>NO_INTEREST</fullName>
                <label>No Interest</label>
            </value>
            <value>
                <fullName>PRIOR_NEGATIVE_EXPERIENCE</fullName>
                <label>Prior Negative Experience</label>
            </value>
            <value>
                <fullName>TECHNICAL_LIMITATIONS</fullName>
                <label>Technical Limitations</label>
            </value>
            <value>
                <fullName>INVALID_CONTACT</fullName>
                <label>Invalid Contact</label>
            </value>
            <value>
                <fullName>FAKE_LEAD</fullName>
                <label>Fake Lead</label>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
                <label>Recycle / Nurture</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Home Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>