force-app/main/default/objects/Contact/fields/Is_My_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Contact__c</fullName>
    <formula>IF( Id =$User.ContactId, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Contact</label>
    <type>Checkbox</type>
</CustomField>