force-app/main/default/objects/Contact/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <description>Classification of the lead based on relationship and sales motion.</description>
    <inlineHelpText>Indicates whether the lead is new, an existing customer opportunity, or a re-engagement effort.</inlineHelpText>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Business</fullName>
                <label>New Business</label>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>RE_ATTEMPTING</fullName>
                <label>Re-engagement</label>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>