force-app/main/default/objects/Contact/fields/Lead_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Lead_Temperature__c</fullName>
    <description>Indicates the perceived likelihood of conversion.</description>
    <inlineHelpText>Select the current sales assessment of the lead’s readiness to buy.</inlineHelpText>
    <label>Lead Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>