force-app/main/default/objects/Contact/fields/Preferred_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Competitor__c</fullName>
    <description>Primary competitor identified for this lead or contact.</description>
    <inlineHelpText>Select the main competitor the prospect is evaluating or currently using.</inlineHelpText>
    <label>Preferred Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3xLogic</fullName>
            </value>
            <value>
                <fullName>3dEye</fullName>
            </value>
            <value>
                <fullName>Agilence</fullName>
            </value>
            <value>
                <fullName>Avigilon</fullName>
            </value>
            <value>
                <fullName>DTiQ</fullName>
            </value>
            <value>
                <fullName>EagleEye</fullName>
            </value>
            <value>
                <fullName>Envysion</fullName>
            </value>
            <value>
                <fullName>Genetec</fullName>
            </value>
            <value>
                <fullName>GetSavi</fullName>
            </value>
            <value>
                <fullName>I3 International</fullName>
            </value>
            <value>
                <fullName>Meraki</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>OpenEye</fullName>
            </value>
            <value>
                <fullName>Rhombus</fullName>
            </value>
            <value>
                <fullName>SpotAI</fullName>
            </value>
            <value>
                <fullName>Verkada</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>