force-app/main/default/objects/Contact/fields/Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the lead recently completed a key conversion event prior to creation.</description>
    <inlineHelpText>Checked if the lead engaged in a high-value action (e.g., demo request, form submission) before being created.</inlineHelpText>
    <label>Recent Conversion</label>
    <type>Checkbox</type>
</CustomField>