force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Is_My_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Contacts</label>
</ListView>